--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+*        text=auto
+*.html text eol=crlf
+*.css text eol=crlf
+*.js text eol=crlf
